3.NN.N - DD-MMM-2019
====================
- Added a complete graph to support PHP-FPM statistics ('phpfpm.pm'). [#167]
- Added a warning if a process vanished during the accouting in 'process.pm'
- Fixed the copyright year in 'monitorix.cgi'.
- Fixed in 'mail.pm to use the option 'mail_log' instead the hard coded path I
forgot to remove when adding the Exim support.
  	(thanks to Jean-Marc Didelot, jm.didelot AT teraneo.fr for pointing this out)
- Fixed to support to show the usage and disk I/O on filesystem names that
  contain spaces. [#234]
- Fixed to ensure that the 'L' option in port.pm is optional.


3.11.0 - 14-Mar-2019
====================
- Added a complete graph to support external ambient sensors ('ambsens.pm').
  	(suggested by Zdenko Dolar, zdenko.dolar AT gmail.com)
- Added an advice in monitorix.conf(5) as a reminder that some default values
  are overwritten in the configuration files on certain systems.
  	(suggested by Sander Bos)
- Changed the way how the Used value in Memory graph is calculated. [#204]
- Changed the alert in 'system.pm' to use the minimum value between the second
  and the third load averages to obtain a more symmetric curve and a sooner
  cancellation of the alert.
  	(suggested by Michael Tosch)
- Added two new graphs (operations and bandwidth) for each pool in 'zfs.pm' to
  show iostats. [#190]
- Removed the 777 permissions bits in docs/monitorix.spec and Makefile for the
  'imgs/' directory. At the same time, when HTTP built-in is enabled, forced to
  setup the owner, group and permission bits to that directory every time
  Monitorix is started.
  	(thanks to Sander Bos for pointing this out)
- Added support to include the 'ss' command in 'netstat.pm'. [#196]
- Added to restart the HTTP built-in every time Monitorix receives the SIGHUP
  signal. This should fix a truncation in the recently rotated logfile.
- Added in 'du.pm' the ability to count files in every directory defined. [#112]